--- a/client-jss/src/app/main/components/subscription/subscription.component.css
+++ b/client-jss/src/app/main/components/subscription/subscription.component.css
@@ -1,3 +1,25 @@
 .btn-yellow:hover {
     color: var(--bs-gray-700) !important;
 }
+
+.card {
+    background-color: var(--bs-gray-100);
+}
+
+.price {
+    font-size: 70px !important;
+}
+
+.lined-price {
+    font-size: 48px !important;
+}
+
+ul li:before {
+    font-family: 'bootstrap-icons';
+    content: '✓';
+    font-size: larger;
+    font-weight: bold;
+    margin: 0 5px 0 -25px;
+    padding-bottom: -10px;
+    color: var(--ar-primary);
+}
