--- a/client-myjss/src/app/modules/quotation/components/required-information/required-information.component.html
+++ b/client-myjss/src/app/modules/quotation/components/required-information/required-information.component.html
@@ -157,7 +157,7 @@
                       souhaitée*</label>
                     <div class="col">
                       <generic-date-picker [(model)]="provision.announcement.publicationDate"
-                        label="Date de publication souhaitée" [form]="informationForm"
+                        label="Sélectionnez une date ci-dessous" [form]="informationForm"
                         [propertyName]="'publicationDate'+provision.order" [isMandatory]="false" [isDisabled]="false"
                         [minDate]="minDatePublication"></generic-date-picker>
                     </div>
