--- a/client-jss/src/app/main/components/subscription/subscription.component.css
+++ b/client-jss/src/app/main/components/subscription/subscription.component.css
@@ -2,8 +2,12 @@
     color: var(--bs-gray-700) !important;
 }
 
+.btn-yellow-dark:hover {
+    color: var(--bs-gray-100) !important;
+}
+
 .card {
-    background-color: var(--bs-gray-100);
+    background-color: var(--bs-gray-200);
 }
 
 .price {
@@ -22,4 +26,14 @@ ul li:before {
     margin: 0 5px 0 -25px;
     padding-bottom: -10px;
     color: var(--ar-primary);
+}
+
+ul li.white:before {
+    font-family: 'bootstrap-icons';
+    content: '✓';
+    font-size: larger;
+    font-weight: bold;
+    margin: 0 5px 0 -25px;
+    padding-bottom: -10px;
+    color: var(--ar-secondary);
 }
