--- a/client-jss/src/app/main/components/subscription/subscription.component.html
+++ b/client-jss/src/app/main/components/subscription/subscription.component.html
@@ -20,22 +20,20 @@
 
     <!-- Subscription cards ANNUAL -->
     <div *ngIf="!isMonthlySubscription" class="row justify-content-center pt-4 g-4">
-      <div class="col-4">
-        <div class="card row">
-          <img src="assets/images/subscription-banner-monthly.svg" class="position-absolute px-0 w-50" />
+      <div class="col-lg-4 col-12 ps-3">
+        <div class="card row h-100">
+          <img src="assets/images/subscription-banner-annual-blue.svg" class="position-absolute px-0 w-50" />
           <div class="col text-center p-4 text-uppercase d-flex align-items-center justify-content-center pb-2">
-            Offre universitaire <p class="badge tag-custom-dark ms-1 m-0 rounded-3 fw-normal">-25%</p>
+            Offre universitaire <p class="badge tag-custom-dark ms-1 m-0 rounded-3 fw-normal">-30%</p>
           </div>
           <div class="col">
             <div class="row justify-content-center align-items-end">
-              <p class=" col-auto text-decoration-line-through p-0 m-0 fw-light fs-2 me-2 lined-price">4€</p>
-              <p class="col-auto p-0 m-0 me-1 fs-1 fw-bolder price">3€</p>
-              <h4 class="col-auto p-0 m-0 fw-normal"> / par mois</h4>
+              <p class=" col-auto text-decoration-line-through p-0 m-0 fw-light fs-2 me-2 lined-price">36€</p>
+              <p class="col-auto p-0 m-0 me-1 fs-1 fw-bolder price">25€</p>
+              <h4 class="col-auto p-0 m-0 fw-normal"> / par an</h4>
             </div>
-
           </div>
           <div class="col p-4 pt-3 card-body align-items-center">
-            <p class="text-center">Étudiants et enseignants</p>
             <a class="btn btn-yellow btn-yellow-burger w-100 mb-2"
               (click)="subscribe($event, false, true, null)">S'abonner</a>
             <ul class="list-unstyled p-2 ps-3 mb-0">
@@ -53,27 +51,65 @@
                 (wishlist d'articles, archivage d'articles, création d’alertes...)
               </li>
               <li>
-                <span class="fw-bold">1 articles/mois à offrir </span>
+                <span class="fw-bold">2 articles/mois à offrir </span>
               </li>
             </ul>
           </div>
         </div>
       </div>
-      <div class="col-4">
-        <div class="card row">
-          <img src="assets/images/subscription-banner-monthly.svg" class="position-absolute px-0 w-50" />
+      <div class="col-lg-4 col-12">
+        <div class="card row bg-secondary text-white h-100">
+          <img src="assets/images/subscription-banner-annual-yellow.svg" class="position-absolute px-0 w-50" />
+          <div class="col text-center p-4 text-uppercase d-flex align-items-center justify-content-center pb-2">
+            Offre entreprise
+          </div>
+          <div class="col">
+            <div class="row justify-content-center align-items-end">
+              <p class="col-auto p-0 m-0 me-1 fs-1 fw-bolder price">99€</p>
+              <h4 class="col-auto p-0 m-0 fw-normal text-white"> / par an</h4>
+            </div>
+          </div>
+          <div class="col p-4 pt-3 card-body align-items-center">
+            <a class="btn btn-yellow-dark btn-yellow btn-yellow-burger w-100 mb-2"
+              (click)="openToast($event)">S'abonner</a>
+            <ul class="list-unstyled p-2 ps-3 mb-0">
+              <li class="white">
+                <span class="fw-bold">Un service client dédié </span>pour tout renseignement (hotline)
+              </li>
+              <li class="white">
+                <span class="fw-bold">Notifications des articles</span> en temps réel (navigateur)
+              </li>
+              <li class="white">
+                <span class="fw-bold">Archives du groupe </span>(depuis 2015)
+              </li>
+              <li class="white">
+                <span class="fw-bold">Un espace “mon compte” adapté à vos besoins </span>
+                (wishlist d'articles, archivage d'articles, création d’alertes...)
+              </li>
+              <li class="white">
+                <span class="fw-bold">3 personnes </span><br>
+                au-delà, nous contacter (sur mesure)
+              </li>
+              <li class="white">
+                <span class="fw-bold">5 articles/mois à offrir </span>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+      <div class="col-lg-4 col-12 pe-3">
+        <div class="card row h-100">
+          <img src="assets/images/subscription-banner-annual-blue.svg" class="position-absolute px-0 w-50" />
           <div class="col text-center p-4 text-uppercase d-flex align-items-center justify-content-center pb-2">
             Offre standard
           </div>
           <div class="col">
             <div class="row justify-content-center align-items-end">
-              <p class="col-auto p-0 m-0 me-1 fs-1 fw-bolder price">4€</p>
-              <h4 class="col-auto p-0 m-0 fw-normal"> / par mois</h4>
+              <p class="col-auto p-0 m-0 me-1 fs-1 fw-bolder price">36€</p>
+              <h4 class="col-auto p-0 m-0 fw-normal"> / par an</h4>
             </div>
-
           </div>
           <div class="col p-4 pt-3 card-body align-items-center">
-            <p class="text-center">Sans conditions</p>
             <a class="btn btn-yellow btn-yellow-burger w-100 mb-2"
               (click)="subscribe($event, false, false, null)">S'abonner</a>
             <ul class="list-unstyled p-2 ps-3 mb-0">
@@ -91,7 +127,7 @@
                 (wishlist d'articles, archivage d'articles, création d’alertes...)
               </li>
               <li>
-                <span class="fw-bold">1 articles/mois à offrir </span>
+                <span class="fw-bold">2 articles/mois à offrir </span>
               </li>
             </ul>
           </div>
@@ -101,8 +137,8 @@
 
     <!-- Subscription cards MONTHLY -->
     <div *ngIf="isMonthlySubscription" class="row justify-content-center pt-4 g-4">
-      <div class="col-4">
-        <div class="card row">
+      <div class="col-xl-4 col-md-8 col-12">
+        <div class="card row h-100">
           <img src="assets/images/subscription-banner-monthly.svg" class="position-absolute px-0 w-50" />
           <div class="col text-center p-4 text-uppercase d-flex align-items-center justify-content-center pb-2">
             Offre universitaire <p class="badge tag-custom-dark ms-1 m-0 rounded-3 fw-normal">-25%</p>
@@ -140,8 +176,8 @@
           </div>
         </div>
       </div>
-      <div class="col-4">
-        <div class="card row">
+      <div class="col-xl-4 col-md-8 col-12">
+        <div class="card row h-100">
           <img src="assets/images/subscription-banner-monthly.svg" class="position-absolute px-0 w-50" />
           <div class="col text-center p-4 text-uppercase d-flex align-items-center justify-content-center pb-2">
             Offre standard
