--- a/client-jss/src/app/main/components/post/post.component.css
+++ b/client-jss/src/app/main/components/post/post.component.css
@@ -13,3 +13,7 @@
 .btn-yellow:hover {
     color: var(--bs-gray-700) !important;
 }
+
+.btn-check:focus+.btn-secondary, .btn-secondary:focus {
+    color: var(--ar-primary);
+}
