--- a/client-jss/src/app/main/components/post/post.component.html
+++ b/client-jss/src/app/main/components/post/post.component.html
@@ -333,8 +333,9 @@
                         </div>
                       </div>
 
-                      <!-- Comment form -->
-                      <div id="commentForm" class="card border-2 pt-2 p-md-2 p-xl-3 p-xxl-4 mt-5 mt-md-0 mb-4">
+                      <!-- Comment form not connected user -->
+                      <div *ngIf="!currentUser" id="commentForm"
+                        class="card border-2 pt-2 p-md-2 p-xl-3 p-xxl-4 mt-5 mt-md-0 mb-4">
                         <div class="card-body">
                           <div class="row justify-content-between align-items-center">
                             <h2 class="col-8 pb-2 pb-lg-3 pb-xl-4" *ngIf="!newCommentParent.id">Laisser un commentaire
@@ -365,6 +366,35 @@
                                 propertyName="mail" [isMandatory]="true" [isDisabled]="false"
                                 [isDisplayLabel]="true"></generic-input>
                             </div>
+                            <div class="col-12">
+                              <generic-textarea [(model)]="newComment.content" label="Commentaire*"
+                                [form]="newCommentForm" propertyName="comment" [isMandatory]="true" [isDisabled]="false"
+                                [numberOfLines]="5"></generic-textarea>
+                            </div>
+                            <div class="col-12">
+                              <button class="btn btn-secondary" type="submit" (click)="postComment()">Publier</button>
+                            </div>
+                          </form>
+                        </div>
+                      </div>
+                      <!-- Comment form connected user -->
+                      <div *ngIf="currentUser" id="commentForm"
+                        class="card border-2 pt-2 p-md-2 p-xl-3 p-xxl-4 mt-5 mt-md-0 mb-4">
+                        <div class="card-body">
+                          <div class="row justify-content-between align-items-center">
+                            <h2 class="col-8 pb-2 pb-lg-3 pb-xl-4" *ngIf="!newCommentParent.id">Laisser un commentaire
+                            </h2>
+                            <h2 class="col-8 pb-2 pb-lg-3 pb-xl-4" *ngIf="newCommentParent.id">Répondre à
+                              {{newCommentParent.authorFirstName}} {{newCommentParent.authorLastNameInitials}}.</h2>
+                            <div class=" col-4 d-inline-flex justify-content-end pb-2 pb-lg-3 pb-xl-4"
+                              *ngIf="newCommentParent.id">
+                              <a type="button" aria-label="Close" class="fs-sm" (click)="cancelReply()">
+                                Annuler la réponse
+                              </a>
+                            </div>
+                          </div>
+                          <p>Votre adresse e-mail ne sera pas publiée. Les champs obligatoires sont indiqués avec *</p>
+                          <form class="row needs-validation g-4" novalidate>
                             <div class="col-12">
                               <generic-textarea [(model)]="newComment.content" label="Commentaire*"
                                 [form]="newCommentForm" propertyName="comment" [isMandatory]="true" [isDisabled]="false"
