--- a/client-myjss/src/app/modules/profile/components/footer/footer.component.html
+++ b/client-myjss/src/app/modules/profile/components/footer/footer.component.html
@@ -69,9 +69,9 @@
             </p>
             <hr>
             <p>
-              <a class="nav-link myjss-nav-link" style="cursor: pointer;" (click)="$event" routerLink="/">Journal
-                Spécial des
-                Sociétés</a>
+              <a class="nav-link myjss-nav-link" style="cursor: pointer;" (click)="openJssRoute($event)"
+                routerLink="/">Journal
+                Spécial des Sociétés</a>
             </p>
           </div>
 
