--- a/client-myjss/src/app/modules/quotation/components/checkout/checkout.component.html
+++ b/client-myjss/src/app/modules/quotation/components/checkout/checkout.component.html
@@ -60,9 +60,10 @@
         </div>
 
         <!-- Quick message -->
-        <div class="row" *ngIf="quotation && quotation.assoAffaireOrders && quotation.assoAffaireOrders[0] && quotation.assoAffaireOrders[0].services 
+        <div class="row"
+          *ngIf="quotation && quotation.assoAffaireOrders && quotation.assoAffaireOrders[0] && quotation.assoAffaireOrders[0].services 
           && quotation.assoAffaireOrders[0].services[0] && quotation.assoAffaireOrders[0].services[0].provisions[0] && 
-          quotation.assoAffaireOrders[0].services[0].provisions[0].provisionFamilyType.label != 'Abonnement'">
+          quotation.assoAffaireOrders[0].services[0].provisions[0].provisionFamilyType.label != provisionFamilyTypeAbonnement.label">
           <div class="card form-check form-switch mb-4 py-4 ">
             <h2 class="pb-3">Gagnez du temps dans vos démarches !</h2>
             <div>
