--- a/client-myjss/src/app/modules/miscellaneous/components/forms/generic-select/generic-select.component.css
+++ b/client-myjss/src/app/modules/miscellaneous/components/forms/generic-select/generic-select.component.css
@@ -15,3 +15,11 @@
   pointer-events: none;
   color: var(--ar-secondary);
 }
+
+.was-validated .form-control:valid, .form-control.is-valid {
+  background-position: right calc(0.35em + 1rem) center !important;
+}
+
+.was-validated .form-control:invalid, .form-control.is-invalid {
+  background-position: right calc(0.35em + 1rem) center !important;
+}
