--- a/client-myjss/src/app/modules/my-account/components/quotation-details/quotation-details.component.html
+++ b/client-myjss/src/app/modules/my-account/components/quotation-details/quotation-details.component.html
@@ -132,7 +132,7 @@
                 <ng-template ngbNavContent>
                   <div class="alert alert-info d-flex mb-0 mb-2" role="alert" *ngIf="canEditQuotation">
                     <i class="ai-circle-info fs-xl"></i>
-                    <div class="ps-2">Vous pouvez télécharger ci-dessous les documents nécessaires au traitement du
+                    <div class="ps-2">Vous pouvez téléverser ci-dessous les documents nécessaires au traitement du
                       service</div>
                   </div>
                   <div class="list-group">
