--- a/client-myjss/src/app/modules/miscellaneous/components/forms/generic-input/generic-input.component.html
+++ b/client-myjss/src/app/modules/miscellaneous/components/forms/generic-input/generic-input.component.html
@@ -9,8 +9,8 @@
       [required]="isMandatory" [maxlength]="maxLength+''" [minlength]="minLength+''" [formControlName]="propertyName"
       [placeholder]="label" (blur)="blurForm()" (keydown.enter)="onEnterTrigger($event)"
       [type]="type=='number'?'text':type" (change)="parse($event)"
-      [class.is-invalid]="form.get(propertyName)?.invalid && form.get(propertyName)?.touched"
-      [class.is-valid]="form.get(propertyName)?.valid && form.get(propertyName)?.touched">
+      [class.is-invalid]="!doNotValidate && form.get(propertyName)?.invalid && form.get(propertyName)?.touched"
+      [class.is-valid]="!doNotValidate && form.get(propertyName)?.valid && form.get(propertyName)?.touched">
     <div class="error" *ngIf="errorMessage && form!.controls[propertyName].hasError('notFilled')">{{errorMessage}}</div>
   </div>
 </div>
