--- a/client-myjss/src/app/modules/my-account/components/edit-affaire/edit-affaire.component.html
+++ b/client-myjss/src/app/modules/my-account/components/edit-affaire/edit-affaire.component.html
@@ -80,7 +80,7 @@
   <div class="text-center pt-1 pt-sm-2">
     <div class="btn-group   " role="group" aria-label="Outline button group">
       <button type="button" class="btn btn-primary" (click)="saveAffaire()">Enregistrer</button>
-      <button type="button" class="btn btn-outline-secondary" (click)="cancelAffaire()">Annuler</button>
+      <button type="button" class="btn btn-outline-secondary" (click)="goBackAffaire()">Annuler</button>
     </div>
   </div>
 </section>
