--- a/client-myjss/src/app/modules/quotation/components/identification/identification.component.html
+++ b/client-myjss/src/app/modules/quotation/components/identification/identification.component.html
@@ -11,8 +11,8 @@
       (change)="changeQuotationType()"></radio-group-quotation-type>
   </section>
 
-  <section *ngIf="!currentDraftStep" class="quotation-container">
-    <div *ngIf="!hideFamilyGroupServiceSelection">
+  <section class="quotation-container">
+    <div>
       <h6><i class="ai-pen pe-2"></i>Pour quel service ?</h6>
       <div *ngFor="let serviceFamily of familyGroupService" class="btn btn-outline-secondary m-2"
         [class.active]="quotation.serviceFamilyGroup && serviceFamily.id == quotation.serviceFamilyGroup.id"
