autoBilledProvision method inCustomerOrderService final generic implementation

--- a/client-myjss/src/app/modules/miscellaneous/components/forms/generic-date-picker/generic-date-picker.component.html
+++ b/client-myjss/src/app/modules/miscellaneous/components/forms/generic-date-picker/generic-date-picker.component.html
@@ -1,6 +1,6 @@
 <div class="position-relative ">
   <div [formGroup]="form!" class="needs-validation">
-    <label [for]="'fl-text'+uniqueId" *ngIf="isDisplayLabel && label && label.length>0"
+    <label [for]="'fl-text'+uniqueId" *ngIf="isDisplayLabel && label!=null && label!=undefined && label.length>0"
       class="form-label">{{label}}</label>
     <input class="form-control form-control" [min]="minDateText" [max]="maxDate" [id]="'fl-text'+uniqueId"
       (change)="dateChange()" [required]="isMandatory" [formControlName]="propertyName" [placeholder]="label"
