fix after code review + other bug fixes

--- a/client-myjss/src/app/modules/my-account/components/order-details/order-details.component.html
+++ b/client-myjss/src/app/modules/my-account/components/order-details/order-details.component.html
@@ -109,7 +109,7 @@
     <div ngbAccordionItem *ngFor="let service of selectedAssoAffaireOrder.services; let index =index"
       (show)="loadServiceDetails(service,false)">
       <h2 ngbAccordionHeader>
-        <button ngbAccordionButton class="border-top card-body padding-38">
+        <button ngbAccordionButton class="border-top">
           <div class="row d-flex justify-content-between align-items-center w-100">
             <div class="col-md-auto col-md-10 order-1">
               <h4 class="h6 mb-2">
