--- a/client-myjss/src/app/modules/my-account/components/quotation-details/quotation-details.component.css
+++ b/client-myjss/src/app/modules/my-account/components/quotation-details/quotation-details.component.css
@@ -14,3 +14,8 @@
   border-radius: 0px;
   background-color: var(--primary-color);
 }
+
+.accordion-button {
+  /* Same as cad-body, to be aligned with it */
+  padding: 2.375rem 2.375rem;
+}
