--- a/client-jss/src/app/libs/toast/toast.component.html
+++ b/client-jss/src/app/libs/toast/toast.component.html
@@ -1,13 +1,12 @@
-<div class="toast-container position-static">
-  <div class="toast fade show" role="alert" aria-live="assertive" aria-atomic="true" *ngFor="let toast of toasts"
-    data-bs-autohide="true">
-    <div class="toast-header">
-      <div class="d-inline-block align-middle rounded-circle me-2" style="width: 1.25rem; height: 1.25rem;"
-        [ngClass]="{'bg-primary' : !toast.isError, 'bg-danger' :toast.isError}">
+<div *ngFor="let toast of toasts">
+  <ngb-toast [delay]="toast.delay ? toast.delay : 5000">
+    <ng-template ngbToastHeader>
+      <div class="me-auto">
+        <i class="bi-x-octagon-fill me-2" *ngIf="toast.isError"></i>
+        <i class="bi-info-circle-fill me-2" *ngIf="!toast.isError"></i>
+        {{toast.title}}
       </div>
-      <h6 class="mb-0 me-auto">{{toast.title}}</h6>
-      <i type="button" class="ai-cross ms-2" data-bs-dismiss="toast" aria-label="Close"></i>
-    </div>
-    <div class="toast-body">{{toast.message}}</div>
-  </div>
+    </ng-template>
+    <div>{{toast.message}}</div>
+  </ngb-toast>
 </div>
