--- a/client-myjss/src/app/libs/toast/toast.component.css
+++ b/client-myjss/src/app/libs/toast/toast.component.css
@@ -1,3 +1,7 @@
-.ai-cross {
-    color: var(--ar-primary);
+.bi-x-octagon-fill {
+    color: crimson;
+}
+
+:host ::ng-deep .btn-close {
+    background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' fill='%23ffffff' viewBox='0 0 16 16'%3e%3cpath d='M4.646 4.646a.5.5 0 0 1 .708 0L8 7.293l2.646-2.647a.5.5 0 0 1 .708.708L8.707 8l2.647 2.646a.5.5 0 0 1-.708.708L8 8.707l-2.646 2.647a.5.5 0 0 1-.708-.708L7.293 8 4.646 5.354a.5.5 0 0 1 0-.708z'/%3e%3c/svg%3e");
 }
