--- a/client-myjss/src/app/modules/miscellaneous/components/forms/generic-date-picker/generic-date-picker.component.html
+++ b/client-myjss/src/app/modules/miscellaneous/components/forms/generic-date-picker/generic-date-picker.component.html
@@ -2,7 +2,7 @@
   <div [formGroup]="form!" class="needs-validation">
     <label [for]="'fl-text'+uniqueId" *ngIf="isDisplayLabel && label!=null && label!=undefined && label.length>0"
       class="form-label">{{label}}</label>
-    <input class="form-control form-control" [min]="minDateText" [max]="maxDate" [id]="'fl-text'+uniqueId"
+    <input class="form-control form-control" [min]="minDate" [max]="maxDate" [id]="'fl-text'+uniqueId"
       (change)="dateChange()" [required]="isMandatory" [formControlName]="propertyName" [placeholder]="label"
       (blur)="blurForm()" type="date">
   </div>
