--- a/client-myjss/src/app/modules/my-account/components/communication-preference/communication-preference.component.html
+++ b/client-myjss/src/app/modules/my-account/components/communication-preference/communication-preference.component.html
@@ -54,7 +54,6 @@
       <h2 class="h4 mb-0">Mes alertes</h2>
     </div>
 
-
     <ul ngbNav #nav="ngbNav" [activeId]="displayedTab" class="nav-tabs">
       <li [ngbNavItem]="0" *ngIf="followedAuthors && followedAuthors.length>0">
         <button ngbNavLink>Rédacteurs</button>
@@ -63,14 +62,26 @@
             <li *ngFor="let author of followedAuthors"
               class="list-group-item d-flex justify-content-between align-items-center border-0 border-bottom">
               <span>{{ author.name }}</span>
-              <div class="d-flex gap-2">
+              <div class="d-none d-sm-flex gap-2">
                 <button type="button" class="btn btn-outline-dark" (click)="openAuthorNewPosts($event, author)">
                   Voir les news
                 </button>
-                <button type="button" class="btn btn-outline-dark"
+                <button type="button" class="btn btn-outline-dark fixed-width-btn"
+                  [ngClass]="isFollowedAuthor[author.id] ? 'btn-follow text-white' :''"
                   (click)="isFollowedAuthor[author.id] ? unfollowAuthor(author) : followAuthor(author)">
-                  <i class="ai" [ngClass]="isFollowedAuthor[author.id] ? 'bi-check-lg' : 'bi-plus-lg'"></i>
+                  <i class="pe-1 bi" [ngClass]="isFollowedAuthor[author.id] ? 'bi-check-lg' : 'bi-plus-lg'"></i>
                   {{ isFollowedAuthor[author.id] ? 'Suivi' : 'Suivre' }}
+                </button>
+              </div>
+              <div class="d-flex d-sm-none gap-2">
+                <button type="button" class="btn btn-outline-dark btn-icon-sm" (click)="openAuthorNewPosts($event,
+                  author)">
+                  <i class="bi bi-eye"></i>
+                </button>
+                <button type="button" class="btn btn-outline-dark btn-icon-sm"
+                  [ngClass]="isFollowedAuthor[author.id] ? 'btn-follow text-white' :''"
+                  (click)="isFollowedAuthor[author.id] ? unfollowAuthor(author) : followAuthor(author)">
+                  <i class="bi" [ngClass]="isFollowedAuthor[author.id] ? 'bi-check-lg' : 'bi-plus-lg'"></i>
                 </button>
               </div>
             </li>
@@ -84,15 +95,28 @@
             <li *ngFor="let jssCategory of followedJssCategories"
               class="list-group-item d-flex justify-content-between align-items-center border-0 border-bottom">
               <span> {{jssCategory.name}}</span>
-              <div class="d-flex gap-2">
+              <div class="d-none d-sm-flex gap-2">
                 <button type="button" class="btn btn-outline-dark"
                   (click)="openJssCategoryNewPosts($event, jssCategory)">
                   Voir les news
                 </button>
-                <button type="button" class="btn btn-outline-dark"
+                <button type="button" class="btn btn-outline-dark fixed-width-btn"
+                  [ngClass]="isFollowedJssCategory[jssCategory.id] ? 'btn-follow text-white' :''"
+                  (click)="isFollowedJssCategory[jssCategory.id] ? unfollowJssCategory(jssCategory) : followJssCategory(jssCategory)">
+                  <i class="pe-1 bi"
+                    [ngClass]="isFollowedJssCategory[jssCategory.id] ? 'bi-check-lg' : 'bi-plus-lg'"></i>
+                  {{ isFollowedJssCategory[jssCategory.id] ? 'Suivi' : 'Suivre' }}
+                </button>
+              </div>
+              <div class="d-flex d-sm-none gap-2">
+                <button type="button" class="btn btn-outline-dark btn-icon-sm"
+                  (click)="openJssCategoryNewPosts($event, jssCategory)">
+                  <i class="bi bi-eye"></i>
+                </button>
+                <button type="button" class="btn btn-outline-dark btn-icon-sm"
+                  [ngClass]="isFollowedJssCategory[jssCategory.id] ? 'btn-follow text-white' :''"
                   (click)="isFollowedJssCategory[jssCategory.id] ? unfollowJssCategory(jssCategory) : followJssCategory(jssCategory)">
                   <i class="bi" [ngClass]="isFollowedJssCategory[jssCategory.id] ? 'bi-check-lg' : 'bi-plus-lg'"></i>
-                  {{ isFollowedJssCategory[jssCategory.id] ? 'Suivi' : 'Suivre' }}
                 </button>
               </div>
             </li>
@@ -106,14 +130,25 @@
             <li *ngFor="let tag of followedTags"
               class="list-group-item d-flex justify-content-between align-items-center border-0 border-bottom">
               <span>{{tag.name}}</span>
-              <div class="d-flex gap-2">
+              <div class="d-none d-sm-flex gap-2">
                 <button type="button" class="btn btn-outline-dark" (click)="openTagNewPosts($event,tag)">
                   Voir les news
                 </button>
-                <button type="button" class="btn btn-outline-dark"
+                <button type="button" class="btn btn-outline-dark fixed-width-btn"
+                  [ngClass]="isFollowedTag[tag.id] ? 'btn-follow text-white' :''"
+                  (click)="isFollowedTag[tag.id] ? unfollowTag(tag) : followTag(tag)">
+                  <i class="pe-1 bi" [ngClass]="isFollowedTag[tag.id] ? 'bi-check-lg' : 'bi-plus-lg'"></i>
+                  {{ isFollowedTag[tag.id] ? 'Suivi' : 'Suivre' }}
+                </button>
+              </div>
+              <div class="d-flex d-sm-none gap-2">
+                <button type="button" class="btn btn-outline-dark btn-icon-sm" (click)="openTagNewPosts($event,tag)">
+                  <i class="bi bi-eye"></i>
+                </button>
+                <button type="button" class="btn btn-outline-dark btn-icon-sm"
+                  [ngClass]="isFollowedTag[tag.id] ? 'btn-follow text-white' :''"
                   (click)="isFollowedTag[tag.id] ? unfollowTag(tag) : followTag(tag)">
                   <i class="bi" [ngClass]="isFollowedTag[tag.id] ? 'bi-check-lg' : 'bi-plus-lg'"></i>
-                  {{ isFollowedTag[tag.id] ? 'Suivi' : 'Suivre' }}
                 </button>
               </div>
             </li>
