--- a/client/src/app/modules/quotation/components/select-attachment-type-dialog/missing-attachment-mail-dialog.component.html
+++ b/client/src/app/modules/quotation/components/select-attachment-type-dialog/missing-attachment-mail-dialog.component.html
@@ -91,7 +91,8 @@
 <div>
   <multiple-upload class="document-upload" [entity]="entity"
     [entityType]="MISSING_ATTACHMENT_QUERY_ENTITY_TYPE.entityType" [editMode]="true"
-    [forcedAttachmentType]="attachmentTypeAutomaticMail" [isDirectUpload]="false"></multiple-upload>
+    [forcedAttachmentType]="attachmentTypeAutomaticMail" [isDirectUpload]="false"
+    [hideUploadButton]="true"></multiple-upload>
 </div>
 <mat-card-content>
   <div *ngIf="missingAttachmentQuery.attachments && missingAttachmentQuery.attachments.length>0">
