--- a/client-myjss/src/app/modules/miscellaneous/components/forms/generic-input/generic-input.component.html
+++ b/client-myjss/src/app/modules/miscellaneous/components/forms/generic-input/generic-input.component.html
@@ -10,7 +10,8 @@
       [placeholder]="label" (blur)="blurForm()" (keydown.enter)="onEnterTrigger($event)"
       [type]="type=='number'?'text':type" (change)="parse($event)"
       [class.is-invalid]="!doNotValidate && form.get(propertyName)?.invalid && form.get(propertyName)?.touched"
-      [class.is-valid]="!doNotValidate && form.get(propertyName)?.valid && form.get(propertyName)?.touched">
+      [class.is-valid]="!doNotValidate && form.get(propertyName)?.valid && form.get(propertyName)?.touched"
+      [autocomplete]="isAutocompleteAvailable" [autocapitalize]="isAutocompleteAvailable" (paste)="onPaste($event)">
     <div class="error" *ngIf="errorMessage && form!.controls[propertyName].hasError('notFilled')">{{errorMessage}}</div>
   </div>
 </div>
