--- a/client-myjss/src/app/modules/quotation/components/checkout/checkout.component.html
+++ b/client-myjss/src/app/modules/quotation/components/checkout/checkout.component.html
@@ -384,7 +384,7 @@
               <generic-input (onFormChange)="saveDraftQuotation()" class="col-md-6 mt-3"
                 [(model)]="quotation.responsable.mail.mail" label="Confirmez votre adresse mail" [form]="documentForm"
                 propertyName="confirmationRespMail" [isMandatory]="true" [isDisabled]="false" type="email"
-                [icon]="'mail'">
+                [icon]="'mail'" [isAutocompleteAvailable]="false" [canPaste]="false">
               </generic-input>
             </div>
           </ng-template>
