--- a/client-jss/src/assets/css/style.css
+++ b/client-jss/src/assets/css/style.css
@@ -8058,7 +8058,20 @@ fieldset:disabled .btn {
 }
 
 .main-background {
-  background-color: #ecf5ff !important;
+  /* Background color definition */
+  background-color: #ecf5ff;
+  width: 100%;
+  height: 100%;
+
+  /* background-image usage to add multiple SVG images */
+  background-image:
+    url('../images/Background-quotation.svg');
+
+  /* Positionning of both images */
+  background-position: top;
+  background-repeat: repeat-y;
+  background-size: 100% auto;
+  background-attachment: scroll;
 }
 
 .bg-primary {
